GUI: graphic updates + finished Javadoc + fixed reconnection bug.